<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:columnCount="6"
    android:rowCount="19">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/credit_vendor_label"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:id="@+id/credit_vendors"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_alignEnd="@+id/linearLayout"
        android:layout_marginBottom="25dip"
        android:layout_above="@+id/linearLayout">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:text="@string/credit_vendor1"
            android:id="@+id/vendor_choice1"
            android:layout_marginRight="44dp"
            android:layout_marginEnd="44dp"
            android:layout_weight="0.05" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credit_vendor2"
            android:id="@+id/vendor_choice2"
            android:layout_marginLeft="45dp"
            android:layout_marginStart="45dp" />
    </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:id="@+id/linearLayout"
        android:layout_above="@+id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/credit_recipient_label"
            android:id="@+id/credit_recipient"
            android:layout_weight="3" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/credit_recipient_input"
            android:layout_weight="3"
            android:phoneNumber="true"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:id="@+id/linearLayout2"
        android:layout_marginBottom="45dip"
        android:layout_above="@+id/send_credit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/credit_amount_label"
            android:id="@+id/credit_amount"
            android:layout_gravity="left"
            android:layout_weight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/credit_amount_input"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:phoneNumber="true" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Send Credit"
        android:id="@+id/send_credit"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/linearLayout2"
        android:layout_alignEnd="@+id/linearLayout2" />

</RelativeLayout>
